# libdomain-powershell-sample

./: .gitignore  CHANGELOG.md  README.RU.md  README.md
module/: LibDomain.psd1  LibDomain.psm1
native/: CMakeLists.txt  main.c
native/test/: CMakeLists.txt  main.c
src/: LibDomain.csproj  Native.cs
